--- a/css/Aristo-Dark/Aristo-Dark.css
+++ b/css/Aristo-Dark/Aristo-Dark.css
@@ -92,14 +92,14 @@
 .ui-state-hover a, .ui-state-hover a:hover { color: #cecece; text-decoration: none; }
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { 
 	outline: none;
-	color: #FFFFFF; border: 1px solid #7D3333;
+	color: #DA9696; border: 1px solid #8f5469;
 	background: #121212 url(images/bg_fallback.png) 0 -50px repeat-x; /* Old browsers */
-		background: -moz-linear-gradient(top, #D11010 0%, #350809 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#D11010), color-stop(100%,#350809)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top, #D11010 0%,#350809 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top, #D11010 0%,#350809 100%); /* Opera11.10+ */
-		background: -ms-linear-gradient(top, #D11010 0%,#350809 100%); /* IE10+ */
-		background: linear-gradient(top, #D11010 0%,#350809 100%); /* W3C */
+		background: -moz-linear-gradient(top, #581D1D 0%, #350809 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#581D1D), color-stop(100%,#350809)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top, #581D1D 0%,#350809 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top, #581D1D 0%,#350809 100%); /* Opera11.10+ */
+		background: -ms-linear-gradient(top, #581D1D 0%,#350809 100%); /* IE10+ */
+		background: linear-gradient(top, #581D1D 0%,#350809 100%); /* W3C */
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
@@ -109,11 +109,11 @@
 
 /* Interaction Cues
 ----------------------------------*/
-.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  { background-color: rgba(11, 88, 162, 0.5);border: 1px solid #095396;border-radius: 0 0 0 0 !important;color: #FFFFFF; }
-.ui-state-highlight a, .ui-widget-content .ui-state-highlight a,.ui-widget-header .ui-state-highlight a { color: #363636; }
-.ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error { background-color: rgba(209, 16, 16, 0.5);border: 1px solid #7D3333;border-radius: 0 0 0 0 !important;color: #FFFFFF; }
-.ui-state-error a, .ui-widget-content .ui-state-error a, .ui-widget-header .ui-state-error a { color: #cd0a0a; }
-.ui-state-error-text, .ui-widget-content .ui-state-error-text, .ui-widget-header .ui-state-error-text { color: #cd0a0a; }
+.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  { border: 1px solid #2d0b24; background: #0b0207; color: #EC9999; -moz-border-radius: 0 !important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }
+.ui-state-highlight a, .ui-widget-content .ui-state-highlight a,.ui-widget-header .ui-state-highlight a { color: #c9c9c9; }
+.ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error { border: 1px solid #1d2f2f; background: #030f0f; color: #d7f4f4; -moz-border-radius: 0 !important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }
+.ui-state-error a, .ui-widget-content .ui-state-error a, .ui-widget-header .ui-state-error a { color: #32f5f5; }
+.ui-state-error-text, .ui-widget-content .ui-state-error-text, .ui-widget-header .ui-state-error-text { color: #32f5f5; }
 .ui-priority-primary, .ui-widget-content .ui-priority-primary, .ui-widget-header .ui-priority-primary { font-weight: bold; }
 .ui-priority-secondary, .ui-widget-content .ui-priority-secondary,  .ui-widget-header .ui-priority-secondary { opacity: .7; filter:Alpha(Opacity=70); font-weight: normal; }
 .ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled { opacity: .35; filter:Alpha(Opacity=35); background-image: none; }
@@ -434,10 +434,10 @@
 .ui-menu .ui-menu-item a.ui-state-active {
 	font-weight: normal;
 	margin: -1px;
-	background: #8C3336;
-	color: #FFFFFF;
-	text-shadow: 0px 1px 1px #D16365;
-	border-color: #A86466;
+	background: #8C3334;
+	color: #000000;
+	text-shadow: 0px 1px 1px #D16364;
+	border-color: #b9799f;
 		-moz-border-radius: 0; 
 		-webkit-border-radius: 0;
 		border-radius: 0;
@@ -472,15 +472,15 @@ button.ui-button-icons-only { width: 3.7em; }
 }
 .ui-button.ui-state-focus {
 	outline: none;
-	color: #e3a8bd;
-	border-color: #7D3333;
+	color: #DA9696;
+	border-color: #8f5469;
 	background: #121212 url(images/bg_fallback.png) 0 -50px repeat-x; /* Old browsers */
-		background: -moz-linear-gradient(top, #D11010 0%, #350809 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#D11010), color-stop(100%,#350809)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top, #D11010 0%,#350809 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top, #D11010 0%,#350809 100%); /* Opera11.10+ */
-		background: -ms-linear-gradient(top, #D11010 0%,#350809 100%); /* IE10+ */
-		background: linear-gradient(top, #D11010 0%,#350809 100%); /* W3C */
+		background: -moz-linear-gradient(top, #581D1D 0%, #350809 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#581D1D), color-stop(100%,#350809)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top, #581D1D 0%,#350809 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top, #581D1D 0%,#350809 100%); /* Opera11.10+ */
+		background: -ms-linear-gradient(top, #581D1D 0%,#350809 100%); /* IE10+ */
+		background: linear-gradient(top, #581D1D 0%,#350809 100%); /* W3C */
 	-moz-box-shadow: 0 0 8px rgba( 255 , 255 , 255 ,  0.15), 0 1px 0 rgba( 0 , 0 , 0 , 0.8) inset; 
 	-webkit-box-shadow: 0 0 8px rgba( 255 , 255 , 255 ,  0.15), 0 1px 0 rgba( 0 , 0 , 0 , 0.8) inset;
 	box-shadow: 0 0 8px rgba( 255 , 255 , 255 ,  0.15), 0 1px 0 rgba( 0 , 0 , 0 , 0.8) inset;
@@ -518,15 +518,15 @@ input.ui-button::-moz-focus-inner {
 /*button sets*/
 .ui-buttonset { margin-right: 7px; }
 .ui-buttonset .ui-button { margin-left: 0; margin-right: -.3em; }
-.ui-buttonset .ui-button.ui-state-active { color: #e3a8bd; border-color: #7D3333; }
+.ui-buttonset .ui-button.ui-state-active { color: #DA9696; border-color: #8f5469; }
 .ui-buttonset .ui-button.ui-state-active {
 	background: #121212 url(images/bg_fallback.png) 0 -50px repeat-x; /* Old browsers */
-		background: -moz-linear-gradient(top, #D11010 0%, #350809 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#D11010), color-stop(100%,#350809)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top, #D11010 0%,#350809 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top, #D11010 0%,#350809 100%); /* Opera11.10+ */
-		background: -ms-linear-gradient(top, #D11010 0%,#350809 100%); /* IE10+ */
-		background: linear-gradient(top, #D11010 0%,#350809 100%); /* W3C */
+		background: -moz-linear-gradient(top, #581D1D 0%, #350809 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#581D1D), color-stop(100%,#350809)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top, #581D1D 0%,#350809 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top, #581D1D 0%,#350809 100%); /* Opera11.10+ */
+		background: -ms-linear-gradient(top, #581D1D 0%,#350809 100%); /* IE10+ */
+		background: linear-gradient(top, #581D1D 0%,#350809 100%); /* W3C */
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
@@ -573,8 +573,8 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .ui-slider { -moz-box-shadow: 0 1px 2px rgba( 255 , 255 , 255 , 0.5) inset; -webkit-box-shadow: 0 1px 2px rgba( 255 , 255 , 255 , 0.5) inset; box-shadow: 0 1px 2px rgba( 255 , 255 , 255 , 0.5) inset; }
 .ui-slider .ui-slider-handle { background: url(images/slider_handles.png) 0px -23px no-repeat; position: absolute; z-index: 2; width: 23px; height: 23px; cursor: default; border: none; outline: none; -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none; }
 .ui-slider  .ui-state-hover, .ui-slider  .ui-state-active { background-position: 0 0; }
-.ui-slider .ui-slider-range { background: #D11010; position: absolute; z-index: 1; font-size: .7em; display: block; border: 0; background-position: 0 0; }
-.ui-slider .ui-slider-range { -moz-box-shadow: 0 1px 2px rgba( 17 , 35 , 45 , 0.6) inset; -webkit-box-shadow: 0 1px 2px rgba( 17 , 35 , 45 , 0.6) inset; box-shadow: 0 1px 2px rgba( 17 , 35 , 45 , 0.6) inset; }
+.ui-slider .ui-slider-range { background: #481616; position: absolute; z-index: 1; font-size: .7em; display: block; border: 0; background-position: 0 0; }
+.ui-slider .ui-slider-range { -moz-box-shadow: 0 1px 2px rgba( 238 , 220 , 210 , 0.6) inset; -webkit-box-shadow: 0 1px 2px rgba( 238 , 220 , 210 , 0.6) inset; box-shadow: 0 1px 2px rgba( 238 , 220 , 210 , 0.6) inset; }
 
 
 .ui-slider-horizontal { height: 5px; }
@@ -584,7 +584,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .ui-slider-horizontal .ui-slider-range-max { right: 0; }
 
 .ui-slider-vertical { width: 5px; height: 100px; }
-.ui-slider-vertical .ui-slider-handle { left: -9px; margin-left: 0; margin-bottom: -13px; }
+.ui-slider-vertical .ui-slider-handle { left: -8px; margin-left: 0; margin-bottom: -13px; }
 .ui-slider-vertical .ui-slider-range { left: 0; width: 100%; }
 .ui-slider-vertical .ui-slider-range-min { bottom: 0; }
 .ui-slider-vertical .ui-slider-range-max { top: 0; }/*
@@ -626,9 +626,9 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
  */
 .ui-datepicker { width: 17em; padding: 0; display: none; border-color: #222222; }
 .ui-datepicker {
-	-moz-box-shadow:0 4px 8px 4px rgba(255, 255, 255, 0.5);
-	-webkit-box-shadow:0 4px 8px 4px rgba(255, 255, 255, 0.5);
-	box-shadow:0 4px 8px 4px rgba(255, 255, 255, 0.5);
+	-moz-box-shadow: 4px 5px 8px -1px rgba(255, 255, 255, 0.5);
+	-webkit-box-shadow: 4px 5px 8px -1px rgba(255, 255, 255, 0.5);
+	box-shadow: 4px 5px 8px -1px rgba(255, 255, 255, 0.5);
 }
 .ui-datepicker .ui-datepicker-header { position:relative; padding:.35em 0; border: none; border-bottom: 1px solid #494949; -moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0; }
 .ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { position:absolute; top: 6px; width: 1.8em; height: 1.8em; }
@@ -653,7 +653,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .ui-datepicker .ui-datepicker-buttonpane button { float: right; margin: .5em .2em .4em; cursor: pointer; padding: .2em .6em .3em .6em; width:auto; overflow:visible; }
 .ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current { float:left; }
 .ui-datepicker-calendar .ui-state-default { background: transparent; border-color: #000000; }
-.ui-datepicker-calendar .ui-state-active { background: #960C0C; border-color: #960C0C; color: #FFFFFF; font-weight: bold; text-shadow: 0 1px 1px #000000; }
+.ui-datepicker-calendar .ui-state-active { background: #8C3334; border-color: #8C3334; color: #000000; font-weight: bold; text-shadow: 0 1px 1px #D16364; }
 
 /* with multiple calendars */
 .ui-datepicker.ui-datepicker-multi { width:auto; }
